--- a/app/src/main/res/layout/layout_listitem.xml
+++ b/app/src/main/res/layout/layout_listitem.xml
@@ -12,7 +12,7 @@
         android:layout_weight="1" />
 
     <TextView
-        android:id="@+id/rssiTextView"
+        android:id="@+id/macAddressTextView"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_weight="1" />
