--- a/app/src/main/res/navigation/navigation_controller.xml
+++ b/app/src/main/res/navigation/navigation_controller.xml
@@ -11,11 +11,10 @@
         tools:layout="@layout/beacon_finder_fragment" >
         <action
             android:id="@+id/action_beaconFinderFragment_to_calibrateBeaconFragment"
-            app:destination="@+id/calibrateBeaconFragment"
-            app:enterAnim="@anim/nav_default_enter_anim"
-            app:exitAnim="@anim/nav_default_exit_anim"
-            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+            app:destination="@id/calibrateBeaconFragment" >
+            <argument android:defaultValue="0"
+                android:name="calibrationStep" />
+        </action>
     </fragment>
     <fragment
         android:id="@+id/calibrateBeaconFragment"
@@ -25,5 +24,9 @@
         <argument
             android:name="calibratingBeacon"
             app:argType="string" />
+        <argument
+            android:name="calibrationStep"
+            app:argType="integer"
+            android:defaultValue="0" />
     </fragment>
 </navigation>
