--- a/app/src/main/res/layout/calibrate_beacon_fragment.xml
+++ b/app/src/main/res/layout/calibrate_beacon_fragment.xml
@@ -8,16 +8,14 @@
 
     <TextView
         android:id="@+id/instructionText"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="183dp"
-        android:layout_marginLeft="183dp"
-        android:layout_marginTop="200dp"
-        android:layout_marginEnd="169dp"
-        android:layout_marginRight="169dp"
+        android:layout_width="373dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="150dp"
+        android:gravity="center"
         android:text="@string/calibration_instructions_text_start"
         android:textSize="26dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.531"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -26,11 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="177dp"
-        android:layout_marginLeft="177dp"
-        android:layout_marginTop="72dp"
         android:layout_marginEnd="176dp"
-        android:layout_marginRight="176dp"
-        android:layout_marginBottom="74dp"
         android:text="@string/calibration_instructions_text_parameter1"
         android:textSize="30dp"
         app:layout_constraintBottom_toTopOf="@+id/progressBar"
@@ -41,15 +35,13 @@
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="20dp"
         android:layout_marginStart="181dp"
-        android:layout_marginLeft="181dp"
         android:layout_marginTop="79dp"
         android:layout_marginEnd="182dp"
-        android:layout_marginRight="182dp"
         android:layout_marginBottom="50dp"
-        android:visibility="gone"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/startButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,9 +51,11 @@
         android:id="@+id/startButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="100dp"
+        android:layout_marginBottom="172dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         tools:text="@string/calibration_start_button" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
