--- a/app/src/main/res/layout/beacon_finder_fragment.xml
+++ b/app/src/main/res/layout/beacon_finder_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".uI.fragments_ViewModels.BeaconFinderFragment">
+    tools:context=".uI.fragments.BeaconFinderFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
