--- a/app/src/main/res/values/germanUi.xml
+++ b/app/src/main/res/values/germanUi.xml
@@ -1,6 +1,15 @@
 <resources>
+    <string name="mainMenu_Title">BBeacon</string>
+    <string name="mainMenu_startLocatingButton">Start Lokalisierung</string>
+    <string name="mainMenu_ConfigRoomButton">Raum Optionen</string>
+    <string name="mainMenu_ShowBeaconsButton">Zeige Beacons</string>
+
+
+    <string name="knownBeaconListItem_select">Auswählen</string>
+    <string name="knownBeaconList_createNewButton">Neuen Sender registrieren</string>
+
+    <string name="calibration_instructions_text_start">Legen sie den Sender auf die jeweilige Entfernung und starten sie die Kalibrierung.</string>
+    <string name="calibration_instructions_text_parameter1">1 Meter</string>
     <string name="calibration_start_button">Start</string>
 
-    <string name="calibration_instructions_text_start">Legen sie den Sender auf die jeweilige Entfernung und starten sie die Kalibration.</string>
-    <string name="calibration_instructions_text_parameter1">1 Meter</string>
 </resources>
