--- a/app/src/main/res/layout/location_fragment.xml
+++ b/app/src/main/res/layout/location_fragment.xml
@@ -6,6 +6,7 @@
     tools:context=".uI.fragments.LocationFragment">
 
     <TextView
+        android:id="@+id/distanceTextView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
