--- a/app/src/main/res/layout/find_beacon_list_item.xml
+++ b/app/src/main/res/layout/find_beacon_list_item.xml
@@ -6,13 +6,13 @@
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/nameTextView"
+        android:id="@+id/beaconNmaeTextView"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_weight="1" />
 
     <TextView
-        android:id="@+id/macAddressTextView"
+        android:id="@+id/macAddressTagTextView"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_weight="1" />
