--- a/app/src/main/res/values/germanUi.xml
+++ b/app/src/main/res/values/germanUi.xml
@@ -9,7 +9,7 @@
     <string name="configRoom_SelectBeacon3Button">Wähle Sender 3</string>
     <string name="configRoom_SelectBeacon4Button">Wähle Sender 4</string>
 
-    <string name="knownBeaconListItem_Select">Auswählen</string>
+    <string name="knownBeaconListItem_Delete">Löschen</string>
     <string name="knownBeaconListItem_MacAddressTag">MAC-Adresse: </string>
     <string name="knownBeaconListItem_DateTag">Datum: </string>
 
