--- a/app/src/main/res/layout/define_beacon_fragment.xml
+++ b/app/src/main/res/layout/define_beacon_fragment.xml
@@ -44,12 +44,17 @@
             android:id="@+id/nameTextInput"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginEnd="50dp">
+            android:layout_marginEnd="50dp"
+            >
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/textEditField"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/defineBeacon_BeaconNameEditTextExample" />
+                android:hint="@string/defineBeacon_BeaconNameEditTextExample"
+                android:imeOptions="actionDone"
+                android:singleLine="true"
+                />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -84,6 +89,7 @@
             android:layout_height="match_parent"
             android:layout_marginEnd="20dp"
             android:max="20"
+            android:min="1"
             android:progress="1" />
 
     </LinearLayout>
@@ -118,6 +124,7 @@
             android:layout_marginEnd="20dp"
             android:layout_weight="1"
             android:max="10"
+            android:min="1"
             android:progress="1" />
 
     </LinearLayout>
