--- a/app/src/main/res/navigation/navigation_controller.xml
+++ b/app/src/main/res/navigation/navigation_controller.xml
@@ -39,12 +39,14 @@
                 android:name="origin"
                 android:defaultValue="Select" />
         </action>
-        <argument
-            android:name="selectedBeaconId"
-            app:argType="string" />
         <argument android:name="beaconToSelect"
             app:argType="integer"
             android:defaultValue="-1" />
+        <argument
+            android:name="beaconObject"
+            app:argType="com.bbeacon.models.CalibratedBeacon"
+            app:nullable="true"
+            android:defaultValue="@null" />
     </fragment>
     <fragment
         android:id="@+id/knownBeaconListFragment"
@@ -107,6 +109,10 @@
                 android:name="selectedBeacon" />
             <argument android:defaultValue=" "
                 android:name="selectedBeaconId" />
+            <argument android:defaultValue=" "
+                android:name="selectedBeaconMacAddress" />
+            <argument android:defaultValue="-1"
+                android:name="beaconToSelect" />
         </action>
         <action
             android:id="@+id/action_mainMenu_to_location"
